# gimp-plugin-scaler-biakima

./: ChangeLog  README.md
help/en/: index.html
src/: Makefile.am  interface.c  main.c  render.c
